# mcp-policy-guard

./: .gitignore  .mcp-policy-guard.example.json  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
docs/: SKILL_REGISTRY.md  reference-review.md  security-audit.md
src/mcp_policy_guard/: __init__.py  cli.py  models.py  policy.py  sarif.py  scanner.py
tests/: test_cli.py  test_policy.py  test_scanner.py
