[build-system]
requires = ["setuptools>=69,<71"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-policy-guard"
version = "0.1.0"
description = "Scan MCP servers and agent repositories for risky policy defaults."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Abdul Basit"}
]
keywords = ["mcp", "security", "agents", "scanner", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
mcp-policy-guard = "mcp_policy_guard.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
